--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee&family=Corinthia&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <title>SCCP</title>
   </head>
   <body>
-    <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
+    <header>
+      <div class="container">
+        <h1>SCCP</h1>
+
+        <img
+          src="assets/escudo-corinthians-2023.svg"
+          alt="Sport Club Corinthians Paulista"
+          title="Sport Club Corinthians Paulista"
+        />
+
+        <nav class="header-nav">
+          <ul>
+            <li><a id="#history-section">História</a></li>
+            <li><a href="#titles-section">Títulos</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
