add: history-section

--- a/index.html
+++ b/index.html
@@ -32,5 +32,46 @@
         </nav>
       </div>
     </header>
+
+    <section id="history-section">
+      <div class="container">
+        <div class="article-container">
+          <article>
+            <h2>Estádio</h2>
+            <img src="assets/neo-quimica.jpg" alt="Neo Química Arena" />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum corrupti necessitatibus ullam autem, odio minus.
+              Repellendus aut mollitia dolore harum in, temporibus ullam est
+              odit quos aliquam praesentium fuga voluptatem.
+            </p>
+          </article>
+
+          <article>
+            <h2>Libertadores (2012)</h2>
+            <img src="assets/libertadores.jpg" alt="Campeão da libertadores" />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum corrupti necessitatibus ullam autem, odio minus.
+              Repellendus aut mollitia dolore harum in, temporibus ullam est
+              odit quos aliquam praesentium fuga voluptatem.
+            </p>
+          </article>
+
+          <article>
+            <h2>Mundial (2012)</h2>
+            <img src="assets/mundial.jpg" alt="Campeão mundial" />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum corrupti necessitatibus ullam autem, odio minus.
+              Repellendus aut mollitia dolore harum in, temporibus ullam est
+              odit quos aliquam praesentium fuga voluptatem.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <hr />
   </body>
 </html>
