add: newsletter-section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="header-nav">
           <ul>
             <li><a id="#history-section">História</a></li>
-            <li><a href="#titles-section">Títulos</a></li>
+            <li><a href="#newsletter-section">Títulos</a></li>
           </ul>
         </nav>
       </div>
@@ -72,6 +72,20 @@
       </div>
     </section>
 
-    <hr />
+    <section id="newsletter-section">
+      <div class="container">
+        <div class="newsletter-title">
+          <h2>NEWSLETTER</h2>
+          <span>Receba novidades do Corinthians</span>
+        </div>
+
+        <form>
+          <input type="text" placeholder="Nome" required />
+          <input type="email" placeholder="E-mail" required />
+          <input type="tel" placeholder="Telefone (opcional)" />
+          <button type="submit">ENVIAR</button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
