fix: updated history section

--- a/index.html
+++ b/index.html
@@ -35,40 +35,27 @@
 
     <section id="history-section">
       <div class="container">
-        <div class="article-container">
-          <article>
-            <h2>Estádio</h2>
+        <article>
+          <h2>Estádio</h2>
+
+          <div class="img-and-paragraph">
             <img src="assets/neo-quimica.jpg" alt="Neo Química Arena" />
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatum corrupti necessitatibus ullam autem, odio minus.
-              Repellendus aut mollitia dolore harum in, temporibus ullam est
-              odit quos aliquam praesentium fuga voluptatem.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet
+              excepturi vero facere asperiores? Ratione provident laudantium
+              neque, cum ut minus pariatur incidunt, cupiditate voluptatibus
+              expedita consectetur eius quibusdam eveniet atque? Lorem, ipsum
+              dolor sit amet consectetur adipisicing elit. Amet excepturi vero
+              facere asperiores? Ratione provident laudantium neque, cum ut
+              minus pariatur incidunt, cupiditate voluptatibus expedita
+              consectetur eius quibusdam eveniet atque? Lorem, ipsum dolor sit
+              amet consectetur adipisicing elit. Amet excepturi vero facere
+              asperiores? Ratione provident laudantium neque, cum ut minus
+              pariatur incidunt, cupiditate voluptatibus expedita consectetur
+              eius quibusdam eveniet atque?
             </p>
-          </article>
-
-          <article>
-            <h2>Libertadores (2012)</h2>
-            <img src="assets/libertadores.jpg" alt="Campeão da libertadores" />
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatum corrupti necessitatibus ullam autem, odio minus.
-              Repellendus aut mollitia dolore harum in, temporibus ullam est
-              odit quos aliquam praesentium fuga voluptatem.
-            </p>
-          </article>
-
-          <article>
-            <h2>Mundial (2012)</h2>
-            <img src="assets/mundial.jpg" alt="Campeão mundial" />
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatum corrupti necessitatibus ullam autem, odio minus.
-              Repellendus aut mollitia dolore harum in, temporibus ullam est
-              odit quos aliquam praesentium fuga voluptatem.
-            </p>
-          </article>
-        </div>
+          </div>
+        </article>
       </div>
     </section>
 
@@ -87,5 +74,27 @@
         </form>
       </div>
     </section>
+
+    <article>
+      <h2>Libertadores (2012)</h2>
+      <img src="assets/libertadores.jpg" alt="Campeão da libertadores" />
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+        corrupti necessitatibus ullam autem, odio minus. Repellendus aut
+        mollitia dolore harum in, temporibus ullam est odit quos aliquam
+        praesentium fuga voluptatem.
+      </p>
+    </article>
+
+    <article>
+      <h2>Mundial (2012)</h2>
+      <img src="assets/mundial.jpg" alt="Campeão mundial" />
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+        corrupti necessitatibus ullam autem, odio minus. Repellendus aut
+        mollitia dolore harum in, temporibus ullam est odit quos aliquam
+        praesentium fuga voluptatem.
+      </p>
+    </article>
   </body>
 </html>
