add: under-tiltes section

--- a/index.html
+++ b/index.html
@@ -75,26 +75,30 @@
       </div>
     </section>
 
-    <article>
-      <h2>Libertadores (2012)</h2>
-      <img src="assets/libertadores.jpg" alt="Campeão da libertadores" />
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-        corrupti necessitatibus ullam autem, odio minus. Repellendus aut
-        mollitia dolore harum in, temporibus ullam est odit quos aliquam
-        praesentium fuga voluptatem.
-      </p>
-    </article>
+    <section id="section-titles">
+      <div class="container">
+        <article>
+          <h2>Libertadores (2012)</h2>
+          <img src="assets/libertadores.jpg" alt="Campeão da libertadores" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            corrupti necessitatibus ullam autem, odio minus. Repellendus aut
+            mollitia dolore harum in, temporibus ullam est odit quos aliquam
+            praesentium fuga voluptatem.
+          </p>
+        </article>
 
-    <article>
-      <h2>Mundial (2012)</h2>
-      <img src="assets/mundial.jpg" alt="Campeão mundial" />
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-        corrupti necessitatibus ullam autem, odio minus. Repellendus aut
-        mollitia dolore harum in, temporibus ullam est odit quos aliquam
-        praesentium fuga voluptatem.
-      </p>
-    </article>
+        <article>
+          <h2>Mundial (2012)</h2>
+          <img src="assets/mundial.jpg" alt="Campeão mundial" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            corrupti necessitatibus ullam autem, odio minus. Repellendus aut
+            mollitia dolore harum in, temporibus ullam est odit quos aliquam
+            praesentium fuga voluptatem.
+          </p>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
