--- a/index.html
+++ b/index.html
@@ -100,5 +100,14 @@
         </article>
       </div>
     </section>
+
+    <footer>
+      <div class="container">
+        <span>
+          Sport Club Corinthians Paulista &copy; 2023 - Todos os direitos
+          reservados - Proteção de Dados
+        </span>
+      </div>
+    </footer>
   </body>
 </html>
